[package]
name = "app-dir"
version = "0.0.0"
authors = ["Simon Leier <simonleier@gmail.com>"]
edition = "2021"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
ndk-context = "0.1.1"
once_cell = "1.10.0"

[target.'cfg(not(any(target_os = "ios", target_os = "macos", target_os = "android")))'.dependencies]
dirs = "4.0.0"