cargo-features = ["strip"]

[package]
name = "isar-core-dart-ffi"
version = "0.0.0"
authors = ["Simon Leier <simonleier@gmail.com>"]
edition = "2021"

[dependencies]
isar-core = { path = "../" }
threadpool = "1.8.1"
once_cell = "1.7.1"
serde_json = "1.0.64"
paste = "1.0"
unicode-segmentation = "1.8.0"

[build-dependencies]
cc = "1.0"

[lib]
crate-type=["staticlib", "cdylib"]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"