[package]
name = "isar"
version = "0.0.0"
authors = ["Simon Leier <simonleier@gmail.com>"]
edition = "2018"

[dependencies]
isar-core = { path = "../" }
threadpool = "1.8.1"
once_cell = "1.10.0"
serde_json = "1.0"
paste = "1.0"
unicode-segmentation = "1.9.0"

[lib]
crate-type=["staticlib", "cdylib"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"