[package]
name = "lmdb-sys"
version = "0.1.0"
authors = ["Simon Leier <simonleier@gmail.com>"]
edition = "2018"

build = "build.rs"

[lib]
name = "lmdb_sys"

[dependencies]
libc = "0.2"

[target.aarch64-linux-android]
rustflags = ["-C", "link-arg=-Wl,--hash-style=both"]

[target.x86_64-linux-android]
rustflags = ["-C", "link-arg=-Wl,--hash-style=both"]

[build-dependencies]
pkg-config = "0.3"
cc = "1.0"
bindgen = { version = "0.57.0", default-features = false, optional = true, features = ["runtime"] }