[package]
name = "mdbx-sys"
version = "0.0.0"
edition = "2018"

[lib]
name = "mdbx_sys"

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
cc = "1.0"
bindgen = { version = "0.59", default-features = false, features = ["runtime"] }
zip = "0.5"
reqwest = { version = "0.11", features = ["blocking"] }
